Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- #699: Use AddPortalContent instead of ModifyPortalContent to condition
  the display of the "New" action in sections and workspaces.
- added translations for the search_sort_results_by voc
- Removed the debian directory of this product since this product will never be
  packaged on its own as a Debian package.
- log_key variable definition was missing in CPSdocument/Extensions/upgrade.py
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in getDocumentTypes.