@@ -12,6 +12,7 @@ Bug fixes:
 - Removed the debian directory of this product since this product will never be
   packaged on its own as a Debian package.
 - log_key variable definition was missing in CPSdocument/Extensions/upgrade.py
+- Taking advantage of the new centralized CPSI18n.tests.translations module.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in getDocumentTypes.
